Add binary tests using ulp comparsion.

--- a/webnn/index.html
+++ b/webnn/index.html
@@ -17,6 +17,7 @@
     <br>
     <p class="thick">Ops tests (testharness.js)</p>
     <div><a href="./add.html">test add operation</a></div>
+    <div><a href="./binary.html">test binary operation</a></div>
     <div><a href="./batch_norm.html">test batchNormalization operation</a></div>
     <div><a href="./clamp.html">test clamp operation</a></div>
     <div><a href="./concat.html">test concat operation</a></div>
