--- a/webnn/batch_norm.html
+++ b/webnn/batch_norm.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test batchNormalization operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-batchnorm">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -42,7 +42,7 @@
       'output': new Float32Array(utils.sizeOfShape(input.shape)),
     };
     graph.compute(inputs, outputs);
-    assert_array_approx_equals_ulp(outputs.output, expected, 0);
+    assert_array_approx_equals_ulp('batchNormalization', outputs.output, expected, 0);
   }
 
   test(() => {
