--- a/webnn/concat.html
+++ b/webnn/concat.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test concat operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-concat">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -28,7 +28,7 @@
       'output': new Float32Array(utils.sizeOfShape(expected.shape)),
     };
     graph.compute(namedInputs, outputs);
-    assert_array_approx_equals_ulp(outputs.output, expected.value, 0);
+    assert_array_approx_equals_ulp('concat', outputs.output, expected.value, 0);
   }
 
   test(() => {
