--- a/webnn/reshape.html
+++ b/webnn/reshape.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test reshape operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-reshape">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -30,7 +30,7 @@
           utils.sizeOfShape(expectedShape ? expectedShape : newShape)),
     };
     graph.compute(inputs, outputs);
-    assert_array_approx_equals_ulp(outputs.y, inputBuffer, 0);
+    assert_array_approx_equals_ulp('reshape', outputs.y, inputBuffer, 0);
   }
 
   test(() => {
