--- a/webnn/sigmoid.html
+++ b/webnn/sigmoid.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test sigmoid operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-sigmoid">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -21,7 +21,7 @@
     const inputs = {'x': new Float32Array(input)};
     const outputs = {'y': new Float32Array(utils.sizeOfShape(shape))};
     graph.compute(inputs, outputs);
-    assert_array_approx_equals_ulp(outputs.y, expected, 0);
+    assert_array_approx_equals_ulp('sigmoid', outputs.y, expected, 0);
   }
   test(() => {
     testSigmoid([-1, 0, 1], [0.26894143, 0.5, 0.7310586], [3]);
