--- a/webnn/softmax.html
+++ b/webnn/softmax.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test softmax operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-softmax">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -51,6 +51,6 @@
       0.35717794384660767,
       0.2116798262910878,
     ];
-    assert_array_approx_equals_ulp(outputs.y, expected, 0);
+    assert_array_approx_equals_ulp('softmax', outputs.y, expected, 0);
   }, 'softmax');
 </script>
