--- a/webnn/split.html
+++ b/webnn/split.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test split operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-split">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -33,7 +33,7 @@
     }
     graph.compute(inputs, outputs);
     for (let i = 0; i < splittedOperands.length; ++i) {
-      assert_array_approx_equals_ulp(outputs[`split${i}`], expectedArray[i].value, 0);
+      assert_array_approx_equals_ulp('split', outputs[`split${i}`], expectedArray[i].value, 0);
     }
   }
 
