--- a/webnn/squeeze.html
+++ b/webnn/squeeze.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <title>test squeeze operation</title>
 <link rel="help" href="https://webmachinelearning.github.io/webnn/#api-mlgraphbuilder-squeeze">
-<script src=/resources/testharness.js></script>
-<script src=/resources/testharnessreport.js></script>
-<script src="https://webmachinelearning.github.io/webnn-polyfill/dist/webnn-polyfill.js"></script>
+<script src=../resources/testharness.js></script>
+<script src=../resources/testharnessreport.js></script>
+<script src="./webnn-polyfill.js"></script>
 <div id=log></div>
 <script type="module">
   'use strict';
@@ -27,7 +27,7 @@
     const inputs = {'x': inputBuffer};
     const outputs = {'y': new Float32Array(utils.sizeOfShape(expectedShape))};
     graph.compute(inputs, outputs);
-    assert_array_approx_equals_ulp(outputs.y, inputBuffer, 0);
+    assert_array_approx_equals_ulp('squeeze', outputs.y, inputBuffer, 0);
   }
 
   test(() => {
