--- a/webnn/sigmoid.html
+++ b/webnn/sigmoid.html
@@ -59,4 +59,63 @@
         ],
         [3, 4, 5]);
   }, 'sigmoid 3d');
+
+  test(() => {
+    testSigmoid(
+        [
+          -88,
+          -79,
+          -73,
+          -67,
+          -76,
+          -67,
+          -46,
+          -37,
+          -28,
+          -49,
+          -37,
+          -1,
+          8,
+          17,
+          -19,
+          -7,
+          44,
+          53,
+          62,
+          11,
+          -28,
+          11,
+          17,
+          23,
+          -16,
+        ],
+        [
+          6.054601895401186e-39,
+          4.906094730649281e-35,
+          1.9792598779469048e-32,
+          7.984904245686979e-30,
+          9.854154686111257e-34,
+          7.984904245686979e-30,
+          1.0530617357553813e-20,
+          8.533047625744066e-17,
+          6.914400106935423e-13,
+          5.242885663363465e-22,
+          8.533047625744066e-17,
+          0.2689414213699951,
+          0.9996646498695336,
+          0.9999999586006244,
+          5.602796406145939e-9,
+          0.0009110511944006454,
+          1,
+          1,
+          1,
+          0.999983298578152,
+          6.914400106935423e-13,
+          0.999983298578152,
+          0.9999999586006244,
+          0.9999999998973812,
+          1.12535162055095e-7,
+        ],
+        [1, 1, 5, 5]);
+  }, 'sigmoid 4d');
 </script>
