For purpose of testing conv2d with activation sigmoid.

--- a/webnn/index.html
+++ b/webnn/index.html
@@ -17,6 +17,7 @@
     <div><a href="./clamp.html">test clamp operation</a></div>
     <div><a href="./concat.html">test concat operation</a></div>
     <div><a href="./conv2d.html">test conv2d operation</a></div>
+    <div><a href="./conv2d_sigmoid">test conv2d (sigmoid) operation</a></div>
     <div><a href="./gemm.html">test gemm operation</a></div>
     <div><a href="./gru_cell.html">test gruCell operation</a></div>
     <div><a href="./gru.html">test gru operation</a></div>
