--- a/webnn/index.html
+++ b/webnn/index.html
@@ -24,6 +24,7 @@
     <div><a href="./leaky_relu.html">test leakyRelu operation</a></div>
     <div><a href="./matmul.html">test matmul operation</a></div>
     <div><a href="./pool2d.html">test pool2d operation</a></div>
+    <div><a href="./pool2d_debug.html">test pool2d (debug) operation</a></div>
     <div><a href="./reduce.html">test reduce operation</a></div>
     <div><a href="./relu.html">test relu operation</a></div>
     <div><a href="./reshape.html">test reshape operation</a></div>
